--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,7 @@
 @import 'pages/adminChangeUsers';
 @import 'pages/adminChangeAdmins';
 @import 'pages/adminChangeBooks';
+@import 'pages/adminChangeCoverImage';
 @import 'pages/about';
 @import 'pages/basket';
 @import 'pages/bookDetails';
