Create back to top button. Website build complete.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@
 // Includes all component styles, including component-specific mixins and functions.
 // Components are intended to be reusable.
 @import 'components/buttons';
+@import 'components/back-to-top';
 @import 'components/forms';
 @import 'components/search-bar';
 @import 'components/data-table';
