--- a/css/main.css
+++ b/css/main.css
@@ -584,6 +584,32 @@ h6 {
   padding: 1.2rem 4.4rem 1.1rem 4.4rem;
 }
 
+/* BACK TO TOP BUTTON
+--------------------------------------------*/
+.back-to-top-button {
+  position: fixed;
+  bottom: 5rem;
+  right: 5rem;
+  font-size: 3rem;
+  text-align: center;
+  color: #FFF;
+  background-color: #008B8B;
+  border-radius: 50%;
+  padding: 1.4rem;
+  cursor: pointer;
+  transition: all 150ms ease-in-out 0s;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
+}
+
+.back-to-top-button__arrow {
+  width: 3.2rem;
+}
+
+.back-to-top-button:hover, .back-to-top-button:focus {
+  opacity: 0.9;
+  outline: 0;
+}
+
 /* FORMS
 --------------------------------------------*/
 /**
